--- a/app/src/main/res/layout/activity_baby_activities.xml
+++ b/app/src/main/res/layout/activity_baby_activities.xml
@@ -111,7 +111,7 @@
             android:id="@+id/title"/>
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="500dp">
+            android:layout_height="480dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -137,8 +137,6 @@
 
             </LinearLayout>
 
-
-
         </ScrollView>
         <Button
             android:layout_width="wrap_content"
@@ -146,7 +144,9 @@
             android:text="add suppies"
             android:onClick="addSupply"
             android:gravity="center"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:background="@android:color/holo_blue_light"
+            android:padding="7dp"/>
 
 
     </LinearLayout>
