--- a/app/src/main/res/layout/activity_feeding.xml
+++ b/app/src/main/res/layout/activity_feeding.xml
@@ -74,6 +74,7 @@
                         android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:text="4"
+                        android:inputType="number"
                         android:textAlignment="center"
                         android:textColor="@android:color/black"
                         android:textSize="25dp" />
@@ -212,7 +213,7 @@
             android:id="@+id/title"/>
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="150dp">
+            android:layout_height="fill_parent">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -223,7 +224,7 @@
                     android:layout_height="match_parent"
                     >
                     <include android:id="@+id/today_logs" layout="@layout/log_view"
-                        android:layout_height="wrap_content"
+                        android:layout_height="150dp"
                         android:layout_width="wrap_content"/>
                 </LinearLayout>
                 <LinearLayout
@@ -231,7 +232,7 @@
                     android:layout_height="match_parent"
                     >
                     <include android:id="@+id/previous_logs" layout="@layout/log_view"
-                        android:layout_height="wrap_content"
+                        android:layout_height="150dp"
                         android:layout_width="wrap_content"/>
 
                 </LinearLayout>
@@ -242,15 +243,6 @@
 
         </ScrollView>
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add Supplies"
-            android:layout_gravity="center"
-            android:background="@android:color/holo_green_light"
-            android:layout_marginTop="10dp"
-            android:padding="20dp"/>
     </LinearLayout>
 
 
