--- a/app/src/main/res/layout/new_supply.xml
+++ b/app/src/main/res/layout/new_supply.xml
@@ -23,7 +23,8 @@
             android:hint="amount"
             android:gravity="center"
             android:id="@+id/formula_edit"
-            android:background="@drawable/box"/>
+            android:background="@drawable/box"
+            android:inputType="number"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="50dp"
@@ -56,7 +57,8 @@
             android:gravity="center"
             android:id="@+id/diaper_edit"
             android:background="@drawable/box"
-            android:layout_marginLeft="5dp"/>
+            android:layout_marginLeft="5dp"
+            android:inputType="number"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="50dp"
