--- a/app/src/main/res/layout/activity_sleep.xml
+++ b/app/src/main/res/layout/activity_sleep.xml
@@ -70,12 +70,12 @@
 
         </LinearLayout>
         <Button
-            android:id="@+id/button"
+            android:id="@+id/music_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="play music"
             android:layout_gravity="center"
-            android:background="@android:color/holo_green_light"
+            android:background="@android:color/holo_blue_light"
             android:layout_marginTop="20dp"
             android:padding="20dp"/>
 
