--- a/app/src/main/res/layout/activity_sleep.xml
+++ b/app/src/main/res/layout/activity_sleep.xml
@@ -39,7 +39,6 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:orientation="horizontal"
             android:paddingRight="10dp"
             android:background="@drawable/box"
@@ -69,31 +68,35 @@
 
 
         </LinearLayout>
+        <com.facebook.login.widget.LoginButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/faceboo_login"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center"
-            android:layout_marginBottom="10dp">
+            >
 
             <Button
                 android:id="@+id/music_button"
                 android:layout_width="40dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
                 android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
                 android:onClick="playMusic"
-                android:padding="10dp" />
+                 />
             <Button
                 android:id="@+id/stop_music"
                 android:layout_width="40dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
                 android:background="@drawable/ic_stop_black_24dp"
                 android:padding="10dp"
                 android:onClick="stopMusic"/>
+
 
         </LinearLayout>
         <TextView
